--- a/src/stylesheets/application.css
+++ b/src/stylesheets/application.css
@@ -1,7 +1,16 @@
 @import url('~normalize.css/normalize.css');
 
-* {
-  box-sizing: border-box;
+.jumbotron
+{
+  background-image: url('https://images.unsplash.com/photo-1507842217343-583bb7270b66?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1753&q=80');
+  color: white;
 }
-
+footer
+{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+}
 /* TODO */
